# api-cookiecutter-template

./: .gitignore  .python-version  CONTRIBUTING.md  README.md  cookiecutter.json  test_cookiecutter.py
.github/workflows/: main.yml
{{cookiecutter.project_name_dashes}}/: .gitignore  .mypy.ini  Makefile  README.md  poetry.toml  pyproject.toml
{{cookiecutter.project_name_dashes}}/.github/actions/gh-pages/: action.yml
{{cookiecutter.project_name_dashes}}/.github/actions/install-project/: action.yml
{{cookiecutter.project_name_dashes}}/.github/workflows/: checkers.yml  publication-release.yml  publication-snapshot.yml  sonarcloud.yml  sphinxdocs.yml
{{cookiecutter.project_name_dashes}}/data/: info.txt
{{cookiecutter.project_name_dashes}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name_dashes}}/src/{{cookiecutter.project_name_underscores}}/: __init__.py  app.py  cli.py  errors.py  load_model.py  setup_logging.py
{{cookiecutter.project_name_dashes}}/src/{{cookiecutter.project_name_underscores}}/endpoints/: health.py  healthcheck.py  info.py  predict.py  root.py  router.py  test.py
{{cookiecutter.project_name_dashes}}/src/{{cookiecutter.project_name_underscores}}/settings/: app_settings.py  args.py  defaults.py
{{cookiecutter.project_name_dashes}}/src/{{cookiecutter.project_name_underscores}}/validation/: result.py
{{cookiecutter.project_name_dashes}}/tasks/: builders.mk  bumpers.mk  checkers.mk  cleaners.mk  documenters.mk  formatters.mk  helpers.mk  reporters.mk
